<resources>
    <string name="app_name">HondaPlayer</string>
    <string name="title_home">ホーム</string>
    <string name="title_control">コントローラー</string>
    <string name="txt_controller">コントローラー</string>
    <string name="txt_play">play</string>
    <string name="txt_pause">pause</string>
    <string name="txt_next">next</string>
    <string name="txt_previous">previous</string>
    <string name="txt_fm_am">FM・AM</string>
    <string name="txt_car_music">Car music</string>
    <string name="txt_android_music">Android music</string>
    <string name="txt_internet_audio">Internet Audio</string>
    <string name="txt_music_arrange">musicをアレンジ</string>
    <string name="txt_music_drop">musicを拾う</string>
    <string name="txt_music_ai_recommend">AI レコメンド</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="popup_notify_title">運転手がお疲れみたい！</string>
    <string name="popup_notify_content">音楽アレンジでお盛り上がろう!</string>
    <string name="popup_sharing">シェア中。。。</string>
    <string name="popup_shared">シェアしました！</string>
    <string name="popup_downloading">ダウンロード中。。。</string>
    <string name="popup_download">Musicをダウンロードしました！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
