<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.co.zenrin.music.player.ControllerActivity"
    android:background="@android:drawable/screen_background_dark">

    <Button
        android:text="@string/txt_android_music"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:id="@+id/btn_android_music"
        android:background="@drawable/bg_button_home"
        android:layout_below="@+id/btn_car_music"
        android:layout_alignStart="@+id/btn_car_music"
        android:textSize="@dimen/btn_text_size"
        android:textAllCaps="false" />

    <Button
        android:text="@string/txt_car_music"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="31dp"
        android:id="@+id/btn_car_music"
        android:background="@drawable/bg_button_home"
        android:layout_below="@+id/btn_am_fm"
        android:layout_alignStart="@+id/btn_am_fm"
        android:textSize="@dimen/btn_text_size"
        android:textAllCaps="false" />

    <Button
        android:text="@string/txt_fm_am"
        android:layout_width="200dp"
        android:layout_marginTop="84dp"
        android:id="@+id/btn_am_fm"
        android:layout_height="50dp"
        android:background="@drawable/bg_button_home"
        android:textSize="@dimen/btn_text_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false" />

    <Button
        android:text="@string/txt_internet_audio"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="34dp"
        android:id="@+id/btn_internet_audio"
        android:background="@drawable/bg_button_home"
        android:textSize="@dimen/btn_text_size"
        android:layout_below="@+id/btn_android_music"
        android:layout_alignStart="@+id/btn_android_music"
        android:textAllCaps="false" />
</RelativeLayout>
