<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.co.honda.music.player.PlayScreenActivity"
    android:background="@android:drawable/screen_background_dark">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar_empty" />


    <Button
        android:text="@string/txt_music_arrange"
        android:layout_marginTop="70dp"
        android:layout_width="200dp"
        android:id="@+id/btn_arrange"
        android:background="@drawable/bg_button_home"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_music_drop"
        android:layout_height="40dp" />

    <Button
        android:text="@string/txt_music_drop"
        android:layout_width="200dp"
        android:layout_marginTop="37dp"
        android:id="@+id/btn_music_drop"
        android:background="@drawable/bg_button_home"
        android:layout_below="@+id/btn_arrange"
        android:layout_centerHorizontal="true"
        android:layout_height="40dp" />

    <Button
        android:text="@string/txt_music_ai_recommend"
        android:layout_width="200dp"
        android:id="@+id/btn_ai_recommend"
        android:background="@drawable/bg_button_home"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/btn_music_drop"
        android:layout_alignStart="@+id/btn_music_drop"
        android:layout_height="40dp" />
</RelativeLayout>
