<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:thumb="@drawable/thumb"
        android:progressDrawable="@drawable/seekbar_progress"/>


    <RelativeLayout
        android:id="@+id/time_duration"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_time_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/btn_text_size"
            android:gravity="center"
            android:text="00:00"
            android:textAllCaps="false"
            android:textColor="@color/color_text_white" />

        <TextView
            android:id="@+id/id_time_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/btn_text_size"
            android:gravity="center"
            android:text="00:00"
            android:textAllCaps="false"
            android:textColor="@color/color_text_white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_button_previous"
            android:contentDescription="@string/txt_previous" />

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_button_pause"
            android:contentDescription="@string/txt_play" />

        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_button_play"
            android:contentDescription="@string/txt_pause"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="60dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_button_next"
            android:contentDescription="@string/txt_next" />

    </RelativeLayout>
</LinearLayout>